--- a/package.json
+++ b/package.json
@@ -2,30 +2,40 @@
   "name": "wecare",
   "version": "1.0.0",
   "main": "./src/app.js",
-  "repository": "https://github.com/mowafag-omer/wecare.git",
+  "repository": "https://github.com/cedriclecalvez/WeCare-Hospital1",
   "license": "MIT",
   "scripts": {
     "build": "rimraf ./build && tsc",
     "start": "nodemon --exec babel-node ./src/app.js",
     "dev": "nodemon",
-    "lintfix": "eslint src --fix --cache"
+    "lintfix": "eslint src --fix --cache",
+    "typeorm": "node --require ts-node/register ./node_modules/typeorm/cli.js",
+    "test": "jest",
+    "test:dev": "jest --watchAll --detectOpenHandles"
   },
   "devDependencies": {
     "@babel/core": "^7.16.0",
     "@babel/node": "^7.16.0",
     "@babel/preset-env": "^7.16.4",
     "@types/bcrypt": "^5.0.0",
+    "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.13",
+    "@types/jest": "^27.4.1",
     "@types/jsonwebtoken": "^8.5.8",
+    "@types/morgan": "^1.9.3",
     "@types/node": "^17.0.18",
+    "@types/supertest": "^2.0.11",
     "@types/validator": "^13.7.1",
     "eslint": "^8.3.0",
     "eslint-config-airbnb": "^19.0.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-prettier": "^4.0.0",
+    "jest": "^27.5.1",
     "nodemon": "^2.0.15",
     "prettier": "^2.4.1",
+    "supertest": "^6.2.2",
+    "ts-jest": "^27.1.3",
     "ts-node": "^10.5.0",
     "typeorm": "^0.2.41",
     "typescript": "^4.5.5"
