--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,7 +39,8 @@ jobs:
               MYSQL_ROOT_PASSWORD: root
             ports: 
               - 3309
-            options: --health-cmd-="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=5
+            options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=5
+      
     steps:
     - name: Checkout
       uses: actions/checkout@v2
