--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,7 @@ on:
   pull_request:
     types: [review_requested, opened, reopened, synchronize]
     branches:
-    - master
+    - main
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
