--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,7 @@ jobs:
       TYPEORM_CONNECTION: mysql
       TYPEORM_HOST: localhost
       TYPEORM_USERNAME: root
-      TYPEORM_PASSWORD: ""
+      TYPEORM_PASSWORD: root
       TYPEORM_DATABASE: hospitalSequelize
       TYPEORM_PORT: 3309
       TYPEORM_SYNCHRONIZE: true
