--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,7 @@ jobs:
       TYPEORM_CONNECTION: mysql
       TYPEORM_HOST: localhost
       TYPEORM_USERNAME: root
-      TYPEORM_PASSWORD: ""
+      TYPEORM_PASSWORD: root
       TYPEORM_DATABASE: hospitalSequelize
       TYPEORM_PORT: 3309
       TYPEORM_SYNCHRONIZE: true
@@ -43,7 +43,7 @@ jobs:
           sudo systemctl enable mysql.service
           sudo systemctl start mysql.service
           sudo systemctl status mysql.service
-          mysql --host 127.0.0.1 --port 3309 -uroot -proot -e "CREATE DATABASE hospitalSequelize"
+          mysql --host 0.0.0.0 --port 3309 -uroot -proot -e "CREATE DATABASE hospitalSequelize"
     - name: Install node
       uses: actions/setup-node@v2
       with:
