--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,7 +43,7 @@ jobs:
           sudo systemctl enable mysql.service
           sudo systemctl start mysql.service
           sudo systemctl status mysql.service
-          mysql --host 127.0.0.1 --port 3309 -uroot -proot -e "CREATE DATABASE hospitalSequelize"
+          sudo mysql --host 127.0.0.1 --port 3309 -e "CREATE DATABASE hospitalSequelize"
     - name: Install node
       uses: actions/setup-node@v2
       with:
