--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,7 +23,7 @@ jobs:
       TYPEORM_CONNECTION: mysql
       TYPEORM_HOST: localhost
       TYPEORM_USERNAME: root
-      TYPEORM_PASSWORD: root
+      TYPEORM_PASSWORD: Valentina2021$
       TYPEORM_DATABASE: hospitalSequelize
       TYPEORM_PORT: 3309
       TYPEORM_SYNCHRONIZE: true
