--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,11 +7,11 @@ name: CI - Unit & Integration
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
   push:
-    branches: [ 6_typeorm_config_deploy ]
+    branches: [ 7_CI_CD ]
   pull_request:
     types: [review_requested, opened, reopened, synchronize]
     branches:
-    - 6_typeorm_config_deploy
+    - 7_CI_CD
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
