--- a/.github/workflows/ci/ci-cd.yml
+++ b/.github/workflows/ci/ci-cd.yml
@@ -1,7 +1,7 @@
 # This is a basic workflow to help you get started with Actions
 
 
-name: CI - Unit & Integration
+name: CI-CD - Unit & Integration
 
 # Controls when the workflow will run
 on:
@@ -63,3 +63,31 @@ jobs:
     - name: Run tests
       run: npm run test
 
+jobs:
+  needs: test
+  build-and-deploy:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - name: Install nodeJS
+        uses: actions/setup-node@v2
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Build app
+        run: npm run build
+
+      - name: Install ssh key
+        uses: shimataro/ssh-key-action@v2
+        with:
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          known_hosts: 'just a placeholder'
+
+      - name: Add known hosts
+        run: ssh-keyscan -H ${{ secrets.SSH_HOST }} >> ~/.ssh/known_hosts
+
+      - name: Deploy app on VPS
+        run: rsync -avz ./build ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST}}:/var/www/html/WeCare-Hospital1/build
