--- a/.github/workflows/ci/ci.yml
+++ b/.github/workflows/ci/ci.yml
@@ -1,7 +1,7 @@
 # This is a basic workflow to help you get started with Actions
 
 
-name: CI-CD - Unit & Integration
+name: CI - Unit & Integration
 
 # Controls when the workflow will run
 on:
