--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -62,9 +62,12 @@ jobs:
 
     - name: Run tests
       run: npm run test
-jobs:
-  needs: test
+
+# CD deploy
+
+  
   build-and-deploy:
+    needs: test
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
