--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,7 +1,7 @@
 # This is a basic workflow to help you get started with Actions
 
 
-name: CI - Unit & Integration
+name: CI-CD - Unit & Integration
 
 # Controls when the workflow will run
 on:
@@ -63,9 +63,7 @@ jobs:
     - name: Run tests
       run: npm run test
 
-# CD deploy
-
-  
+# CD deploy  
   build-and-deploy:
     needs: test
     runs-on: ubuntu-latest
