--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "license": "MIT",
   "scripts": {
     "build": "rimraf ./build && tsc",
-    "start": "nodemon --exec babel-node ./src/app.js",
+    "start": "nodemon --exec babel-node ./build/app.js",
     "dev": "nodemon",
     "lintfix": "eslint src --fix --cache",
     "typeorm": "node --require ts-node/register ./node_modules/typeorm/cli.js",
@@ -14,43 +14,44 @@
     "test:dev": "jest --watchAll --detectOpenHandles"
   },
   "devDependencies": {
-    "@babel/core": "^7.16.0",
-    "@babel/node": "^7.16.0",
-    "@babel/preset-env": "^7.16.4",
+    "@babel/core": "^7.17.9",
+    "@babel/node": "^7.16.8",
+    "@babel/preset-env": "^7.16.11",
     "@types/bcrypt": "^5.0.0",
     "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.13",
     "@types/jest": "^27.4.1",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/morgan": "^1.9.3",
-    "@types/node": "^17.0.18",
-    "@types/supertest": "^2.0.11",
-    "@types/validator": "^13.7.1",
-    "eslint": "^8.3.0",
-    "eslint-config-airbnb": "^19.0.1",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-import": "^2.25.3",
+    "@types/node": "^17.0.23",
+    "@types/supertest": "^2.0.12",
+    "@types/validator": "^13.7.2",
+    "@types/webpack": "^5.28.0",
+    "eslint": "^8.13.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "^27.5.1",
     "nodemon": "^2.0.15",
-    "prettier": "^2.4.1",
+    "prettier": "^2.6.2",
     "supertest": "^6.2.2",
-    "ts-jest": "^27.1.3",
-    "ts-node": "^10.5.0",
+    "ts-jest": "^27.1.4",
+    "ts-node": "^10.7.0",
     "typeorm": "^0.2.41",
-    "typescript": "^4.5.5"
+    "typescript": "^4.6.3"
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
-    "body-parser": "^1.19.0",
+    "body-parser": "^1.20.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
-    "dotenv": "^10.0.0",
-    "express": "^4.17.1",
+    "dotenv": "^16.0.0",
+    "express": "^4.17.3",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "mysql2": "^2.3.3",
-    "sequelize": "^6.12.0-alpha.1",
-    "winston": "^3.3.3"
+    "sequelize": "^6.18.0",
+    "winston": "^3.7.2"
   }
 }
