--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -7,11 +7,11 @@ name: CI-CD - Unit & Integration
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
   push:
-    branches: [ main ]
+    branches: [ 7_CI_CD ]
   pull_request:
     types: [review_requested, opened, reopened, synchronize]
     branches:
-    - main
+    - 7_CI_CD
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
